sespa/app/styles/main.css
@import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  font-family: Lato, Helvetica;
  padding-top: 50px;
  padding-bottom: 50px;
}

.navbar-inverse {
    background-color: #1c3144;
}

.sub-header {
  color: brown;
  font-weight: 400;
  margin-top: 6%;
  /*border-bottom: 1px solid #eee;*/
}

.navbar {
    vertical-align: middle;
}

.navbar-fixed-top {
  position: relative;
  margin-top: -50px;
  border: 0;
}

/* Unify indents in the dropdown-menu */
.dropdown-menu p {
  padding: 3px 20px;
}

.alert-container {
  position: absolute;
  width: 100%;
  top: 70px;
  z-index: 1000;
}
.alert-container div {
  margin: auto;
  margin-bottom: 2px;
  width: 600px;
}

/* Highlight background if the user hasn't accepted the policy */
.policy-warning {
    background-color: rgba(255,200,200,1);
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  background-color: #1c3144;
  font-weight: 300;
  color: white;
  padding-left: 15px;
  padding-right: 15px;
  margin-top: 40px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

.student-info table tbody th,
.student-info table tbody td {
    border: 0;
}

.student-info table tbody td p {
    margin: 0 0 2px;
}
th[scope="row"] {
  font-weight:normal;
}
/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 100% !important;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

a.class-site-status-link {
  text-decoration: none;
}

.class-site-status {
  height: 20pt;
  margin-right: 5px;
  content:url("../images/Status_Icons_Not Applicable.png")
}

.status-encourage {
  content:url("../images/Status_Icons_Green.png")
}
.status-explore {
  content:url("../images/Status_Icons_Yellow.png")
}
.status-engage {
  content:url("../images/Status_Icons_Red.png")
}


@media screen and (max-width: 768px) {
  .open > .dropdown-menu {
    color: #9d9d9d;
  }
  .sub-header {
    margin-top: 0;
  }
  .alert-container {
    position: inherit;
    width: 100%;
    top: 70px;
    z-index: 1000;
    padding: 10px
  }
  .alert-container div {
    margin-bottom: 10px;
    width: 100%
  }
}

@media screen and (max-width: 600px) {
  .hide-small {
    display: none;
  }

  .navbar-fixed-bottom {
    position: relative;
  }

  body {
    padding-bottom: 0;
  }

  .footer-block {
    display: block;
  }
}

/* For ng-cloak */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

/* For progress bar */
.progress {
  width: 200px;
  overflow: visible;
}

.progress-flat {
  -webkit-box-shadow: none;
  background-color: transparent;
  border-radius: 0;
  box-shadow: none;
  margin-bottom: 0;
}

.progress-bar {
  text-align: left;
  padding-left: 5px;
  min-width: 5em;
}

.progress-bar-flat {
  box-shadow: none;
  -webkit-box-shadow: none;
}

.progress-label {
  font-weight: bold;
}

.progress-text{
    color:#c8d6c7;
    display: none;
    margin-left: 6px;
}

.progress-text-outside {
  color: black;
  display: inline-block;
  padding-left: 5px;
  position: absolute;
  right: 0;
  transform: translateX(100%);
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  -o-transform: translateX(100%);
  transform: translateX(100%);
}

/* For student and class average legend */

.legend-text {
  display: inline-block;
  margin-bottom: 0;
}

.legend-text:not(:first-of-type) {
  margin-left: 1em;
}

.legend-key {
  border-radius: 50%;
  display: inline-block;
  height: 10px;
  margin-right: 0.4em;
  width: 10px;
}

.student-legend-key {
  background-color: #255c91;
}

.class-legend-key {
  background-color: #F0D654;
}

/* For student grade progress bar*/
.studentGradeBar {
  background: #255c91;
  position: relative;
}

.classAveBar {
  background: #F0D654;
  height: 20px;
  position: relative;
  width: 5px;
}


.main-no-margin-top{
    margin-top: 0px;
}

.main-less-weight{
    margin-top: 10px;
    font-weight: 300;
}

.main-h3{
    color: #1c3144;
}

.main-color-white{
    color: #e5e5e5 !important;
}
.main-navbar-brand {
    font-weight: 200;
}

.main-page-end-margin-bottom{
    margin-bottom: 100px;
}

svg {
    height: 350px !important;
    margin-top: 40px;
}

svg text {
  font: normal 13px Lato, Helvetica;
}
.nvtooltip {
    font-family: Lato, Helvetica;
}
.nvtooltip h3 {
  margin: 0;
  padding: 4px 14px;
  font-size: 15px;
  line-height: 18px;
  font-weight: bold;
  background-color: rgba(247,247,247,0.75);
  text-align: center;

  border-bottom: 1px solid #ebebeb;

  -webkit-border-radius: 5px 5px 0 0;
  -moz-border-radius: 5px 5px 0 0;
  border-radius: 5px 5px 0 0;
}

.tooltip-inner {
    text-align:left;
    white-space: pre-line;
}

.backlink{
    font-size: 20px;
    color:#1F77B4;
    text-decoration: none !important;
}

.backlink : hover{
    color: #1c3144;
}


#student-search {
    width: 22em;
}

.graph-caption{
    font-size:x-large;
    font-weight: 300;
    color:brown;
    text-align: center;
}

.navbar-inverse .navbar-nav > li > a {
    color: whitesmoke;
    font-weight: 300;
    font-size: 15px;
}

.navbar-inverse .navbar-nav > li.active > a, .navbar-inverse .navbar-nav > li.active > a:hover, .navbar-inverse .navbar-nav > li.active > a:focus {
    background-color: #124465;
}

.navbar-inverse .navbar-nav > li > a:hover {
    color: #dedede;
    background-color: #124465;
}

.unsortable:hover {
    text-decoration: none;
    color: #337ab7;
}

.not-found {
    margin-top: 6%;
}

.nv-x .tick line {
    display: none;
}

